--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dashboard -- webpack-dev-server",
+    "dev": "webpack-dev-server",
     "prebuild": "rimraf dist",
     "build": "webpack -p"
   },
@@ -13,23 +13,25 @@
   "license": "",
   "devDependencies": {
     "babel-core": "6.17.0",
-    "babel-loader": "6.2.5",
-    "babel-preset-es2015": "6.16.0",
-    "css-loader": "0.25.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.24.1",
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.24.0",
+    "html-webpack-react-root-plugin": "^0.9.0",
     "open-browser-webpack-plugin": "0.0.2",
     "rimraf": "2.5.4",
-    "style-loader": "0.13.1",
     "webpack": "1.13.2",
-    "webpack-dashboard": "0.2.0",
     "webpack-dev-server": "1.16.2"
   },
   "dependencies": {
+    "html-webpack-plugin": "^2.24.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "webpack": "^1.3.0"
   }
 }
