--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "webpack-app",
-  "version": "1.0.0",
+  "name": "meals-on-wheels",
+  "version": "0.1.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "scripts": {
     "dev": "webpack-dev-server",
     "prebuild": "rimraf dist",
     "build": "webpack -p"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nmodi/meals-on-wheels.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "6.17.0",
     "babel-loader": "^6.2.5",
@@ -32,6 +36,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "styled-components": "^3.0.2",
     "webpack": "^1.3.0"
   }
 }
