--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.9",
     "file-loader": "0.9.0",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.24.0",
     "html-webpack-react-root-plugin": "^0.9.0",
+    "node-sass": "^4.7.2",
     "open-browser-webpack-plugin": "0.0.2",
     "rimraf": "2.5.4",
+    "style-loader": "^0.20.1",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2"
   },
@@ -36,6 +39,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "sass-loader": "^4.1.1",
     "styled-components": "^3.0.2",
     "webpack": "^1.3.0"
   }
