--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "html-webpack-plugin": "^2.24.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
+    "react-saga": "^0.2.6",
     "redux": "^3.7.2",
     "sass-loader": "^4.1.1",
     "styled-components": "^3.0.2",
