--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "babel-core": "6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.24.1",
     "file-loader": "0.9.0",
     "filemanager-webpack-plugin": "^1.0.24",
@@ -29,21 +28,20 @@
     "html-webpack-plugin": "2.24.0",
     "html-webpack-react-root-plugin": "^0.9.0",
     "open-browser-webpack-plugin": "0.0.2",
+    "rimraf": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "1.13.2",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "1.16.2"
+    "webpack-dev-server": "1.16.2",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
-    "rimraf": "^2.6.2",
-    "styled-components": "^3.0.2",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "1.13.2",
-    "webpack-merge": "^4.1.2"
+    "styled-components": "^3.0.2"
   }
 }
