feature added tick function

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "file-loader": "0.9.0",
@@ -28,6 +29,7 @@
     "html-webpack-plugin": "2.24.0",
     "html-webpack-react-root-plugin": "^0.9.0",
     "open-browser-webpack-plugin": "0.0.2",
+    "redux-devtools-extension": "^2.13.2",
     "rimraf": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "1.13.2",
@@ -38,7 +40,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
