--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "open-browser-webpack-plugin": "0.0.5",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
@@ -38,6 +40,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.26.0",
     "styled-components": "^3.0.2"
