--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "js-yaml-loader": "^1.2.2",
     "open-browser-webpack-plugin": "0.0.5",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
@@ -38,11 +39,15 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.2.2",
     "recompose": "^0.26.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
     "styled-components": "^3.0.2"
   }
 }
