--- a/src/config/trucks.yaml
+++ b/src/config/trucks.yaml
@@ -1,16 +1,23 @@
 ---
-- dilapidated:
-  name: Dilapidated Food Truck
-  id: dilapidated-truck
-  equipment-slots: 3
-  cost: 0
-- average:
-  name: Average Food Truck
-  id: average-truck
-  equipment-slots: 5
-  cost: 500
-- amazing:
-  name: Amazing Food Truck
-  id: amazing-truck
-  equipment-slots: 7
-  cost: 1500
+dilapidated_truck:
+    name: Dilapidated Food Truck
+    id: dilapidated_truck
+    equipment-slots: 3
+    cost: 0
+    appliances: 
+        - rusty_oven
+        - rusty_fridge
+        - rusty_griddle
+        - rusty_fryer
+
+average_truck:
+    name: Average Food Truck
+    id: average_truck
+    equipment-slots: 5
+    cost: 500
+
+amazing_truck: 
+    name: Amazing Food Truck
+    id: amazing_truck
+    equipment-slots: 7
+    cost: 1500
