renamed equipment to appliances

--- a/src/config/menu-items.yaml
+++ b/src/config/menu-items.yaml
@@ -4,7 +4,7 @@
     tags:
         - sandwich
         - latino
-    equipmentNeeded:
+    applianceNeeded:
         - plancha
         - oven
     ingredients:
@@ -17,5 +17,5 @@
         - mexican
         - latino
         - taco
-    equipmentNeeded: []
+    applianceNeeded: []
     ingredients: []
