--- a/src/config/appliances.yaml
+++ b/src/config/appliances.yaml
@@ -1,30 +1,36 @@
 ---
-rusty_oven:
-    name: Rusty Oven
+-   name: Rusty Oven
+    id: rusty_oven
     cost: 100
-    prereq: none
+    prereq: []
     rating: 1
+    type: oven
 
-electric_oven:
-    name: Electric Oven
+-   name: Electric Oven
+    id: electric_oven
     cost: 100
-    prereq: rusty_oven
+    prereq: 
+        - rusty_oven
     rating: 2
+    type: oven
 
-rusty_fridge:
-    name: Rusty Fridge
+-   name: Rusty Fridge
+    id: rusty_fridge
     cost: 500
-    prereq: none
+    prereq: []
     rating: 1
+    type: fridge
 
-rusty_fryer:
-    name: Rusty Fryer
+-   name: Rusty Fryer
+    id: rusty_fryer
     cost: 100
-    prereq: none
+    prereq: []
     rating: 1
+    type: fryer
 
-rusty_griddle:
-    name: Rusty Griddle
+-   name: Rusty Griddle
+    id: rusty_griddle
     cost: 100
-    prereq: none
+    prereq: []
     rating: 1
+    type: griddle
